crates/vite_task_bin/tests/snapshots/snapshots__query - explicit package name under different package@transitive-dependency-workspace.snap
---
source: crates/vite_task_bin/tests/snapshots.rs
expression: execution_graph_snapshot
input_file: crates/vite_task_bin/tests/fixtures/transitive-dependency-workspace
---
[
  {
    "task": {
      "package_dir": "<redacted>/packages/c",
      "task_name": "build"
    },
    "deps": []
  }
]
