crates/vite_task_bin/tests/snapshots/snapshots__query - explicit package name under non-package cwd@transitive-dependency-workspace.snap
---
source: crates/vite_task_bin/tests/snapshots.rs
expression: "&plan"
input_file: crates/vite_task_bin/tests/fixtures/transitive-dependency-workspace
---
SessionExecutionPlan(
  cli_args_without_program: [
    "run",
    "@test/c#build",
  ],
  cwd: "<redacted>/",
  plan: ExecutionPlan(
    root_node: Expanded({
      ("<redacted>/packages/c", "build"): DiGraphValue(
        node: TaskExecution(
          task_display: TaskDisplay(
            package_name: "@test/c",
            task_name: "build",
            package_path: "<redacted>/packages/c",
          ),
          items: [
            ExecutionItem(
              command_span: Range(
                start: 0,
                end: 15,
              ),
              extra_args: [],
              plan_cwd: "<redacted>/",
              kind: Leaf(InProcess(InProcessExecution(
                kind: Echo(
                  strings: [
                    "Building",
                    "C",
                  ],
                  trailing_newline: true,
                ),
              ))),
            ),
          ],
        ),
        neighbors: {},
      ),
    }),
  ),
)
