crates/vite_task_bin/tests/snapshots/snapshots__query - recursive and transitive@transitive-dependency-workspace.snap
---
source: crates/vite_task_bin/tests/snapshots.rs
expression: err
input_file: crates/vite_task_bin/tests/fixtures/transitive-dependency-workspace
---
"RecursiveTransitiveConflict"
