crates/vite_task_bin/tests/snapshots/snapshots__query - simple task by name@transitive-dependency-workspace.snap
---
source: crates/vite_task_bin/tests/snapshots.rs
expression: "&plan"
input_file: crates/vite_task_bin/tests/fixtures/transitive-dependency-workspace
---
SessionExecutionPlan(
  cli_args_without_program: [
    "run",
    "build",
  ],
  cwd: "<redacted>/packages/a",
  plan: ExecutionPlan(
    root_node: Expanded({
      ("<redacted>/packages/a", "build"): DiGraphValue(
        node: TaskExecution(
          task_display: TaskDisplay(
            package_name: "@test/a",
            task_name: "build",
            package_path: "<redacted>/packages/a",
          ),
          items: [
            ExecutionItem(
              command_span: Range(
                start: 0,
                end: 15,
              ),
              extra_args: [],
              plan_cwd: "<redacted>/packages/a",
              kind: Leaf(InProcess(InProcessExecution(
                kind: Echo(
                  strings: [
                    "Building",
                    "A",
                  ],
                  trailing_newline: true,
                ),
              ))),
            ),
          ],
        ),
        neighbors: {
          ("<redacted>/packages/a", "test"): (),
        },
      ),
      ("<redacted>/packages/a", "test"): DiGraphValue(
        node: TaskExecution(
          task_display: TaskDisplay(
            package_name: "@test/a",
            task_name: "test",
            package_path: "<redacted>/packages/a",
          ),
          items: [
            ExecutionItem(
              command_span: Range(
                start: 0,
                end: 11,
              ),
              extra_args: [],
              plan_cwd: "<redacted>/packages/a",
              kind: Leaf(InProcess(InProcessExecution(
                kind: Echo(
                  strings: [
                    "test",
                    "a",
                  ],
                  trailing_newline: true,
                ),
              ))),
            ),
          ],
        ),
        neighbors: {},
      ),
    }),
  ),
)
