crates/vite_task_bin/tests/snapshots/snapshots__query - transitive non existent task@transitive-dependency-workspace.snap
---
source: crates/vite_task_bin/tests/snapshots.rs
expression: err
input_file: crates/vite_task_bin/tests/fixtures/transitive-dependency-workspace
---
Error {
    task_call_stack: TaskCallStackDisplay {
        frames: [],
    },
    kind: TaskQueryError(
        SpecifierLookupError {
            specifier: TaskSpecifier {
                package_name: None,
                task_name: "non-existent-task",
            },
            lookup_error: TaskNameNotFound {
                package_name: "@test/a",
                task_name: "non-existent-task",
                package_index: NodeIndex(PackageIx(0)),
            },
        },
    ),
}
